Chevron alignment fix

--- a/css/build.css
+++ b/css/build.css
@@ -204,7 +204,7 @@ body.fl-with-top-menu {
   cursor: default;
   margin-top: 0;
   z-index: 10;
-  line-height: 44px;
+  line-height: 40px;
   font-size: 38px;
   color: #333333;
   text-align: center;
